--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-images": "^0.5.19",
     "react-intersection-observer": "^8.25.2",
     "react-scrollspy": "^3.4.0",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
